<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_menu_home" />

    <item
        android:id="@+id/feedFragment"
        android:title="@string/feed"
        android:icon="@drawable/ic_menu_feed" />

    <item
        android:id="@+id/cartFragment"
        android:title="@string/cart"
        android:icon="@drawable/ic_menu_cart" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        android:icon="@drawable/ic_menu_profile" />

</menu>