<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.home.presentation.view.HomeFragment">

    <data>

        <variable
            name="viewModel"
            type="com.auroraministudio.sehatqassignment.feature.home.presentation.viewmodel.HomeViewModel" />

        <variable
            name="adapterProduct"
            type="com.auroraministudio.sehatqassignment.feature.home.presentation.adapter.ProductAdapter" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_home"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/windowBackground"
            android:elevation="@dimen/_3sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_round_sehatq" />

                <RelativeLayout
                    android:id="@+id/btn_search_home"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_28sdp"
                    android:layout_marginStart="@dimen/padding_normal"
                    android:layout_marginEnd="@dimen/padding_normal"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_input_type1_normal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/padding_small"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_menu_search" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_medium"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/padding_medium"
                        android:textColor="@color/textHintColor"
                        android:text="@string/search" />

                </RelativeLayout>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            tools:listitem="@layout/item_category"
            tools:itemCount="1"
            android:scrollbars="none" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_promo"
            android:textSize="@dimen/text_normal"
            android:layout_marginTop="@dimen/padding_small"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:layout_marginStart="@dimen/padding_medium" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/padding_small"
            app:setAdapter="@{adapterProduct}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_product" />

    </LinearLayout>
</layout>