<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.auroraministudio.sehatqassignment.feature.productdetail.presentation.view.DetailProductFragment">

    <data>

        <variable
            name="product"
            type="com.auroraministudio.sehatqassignment.domain.model.Product" />

        <variable
            name="viewModel"
            type="com.auroraministudio.sehatqassignment.feature.productdetail.presentation.viewmodel.DetailProductViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_detail_product"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/windowBackground"
            android:elevation="@dimen/_3sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_back_search_detail_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_menu_back_ios" />

                <ImageView
                    android:id="@+id/btn_share_detail_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/padding_medium"
                    android:src="@drawable/ic_menu_share" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_price_detail_product"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:elevation="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/windowBackground">

                <TextView
                    android:id="@+id/tv_price_detail_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_large"
                    tools:text="$55"
                    android:textColor="@color/textColor"
                    android:text="@{product.price}"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/padding_normal"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_buy_detail_product"
                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_alignParentEnd="true"
                    android:onClick="@{() -> viewModel.actionBuyProduct(product)}"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/padding_medium"
                    android:text="@string/buy"
                    style="@style/Button.Type1" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/list_detail_product"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_detail_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cv_price_detail_product">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/iv_cover_detail_product"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_200sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:setImageUrl="@{product.imageUrl}"
                    tools:src="@color/textColor" />

                <TextView
                    android:id="@+id/tv_title_detail_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_very_large"
                    android:textColor="@color/textColor"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAlignment="center"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:layout_marginStart="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@+id/iv_cover_detail_product"
                    android:text="@{product.title}"
                    tools:text="Title" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/anim_loved_product"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/padding_normal"
                    app:goneUnless="@{viewModel.showAnimLikeProduct}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_title_detail_product"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_title_detail_product"
                    app:lottie_fileName="like_anim.json"
                    app:lottie_loop="false"/>

                <RelativeLayout
                    android:id="@+id/btn_loved_product"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/padding_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:goneUnlessReverse="@{viewModel.showAnimLikeProduct}"
                    app:layout_constraintTop_toTopOf="@+id/tv_title_detail_product"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_title_detail_product">

                    <ImageView
                        android:id="@+id/iv_flag_loved_detail_product"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerInParent="true"
                        app:flagImageLoved="@{viewModel.hasLikeProduct}"
                        app:srcCompat="@drawable/v_ic_love_normal"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_description_detail_product"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_normal"
                    android:textColor="@color/textSecondaryColor"
                    android:lineSpacingExtra="@dimen/_1sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/padding_normal"
                    android:layout_marginEnd="@dimen/padding_normal"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_detail_product"
                    app:layout_constraintBottom_toTopOf="@+id/v_line_bottom_detail_product"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:text="@{product.description}"
                    tools:text="@string/lorem_ipsum" />

                <View
                    android:id="@+id/v_line_bottom_detail_product"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_height="@dimen/_30sdp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>