...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_title_toolbar_profile_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/text_large_medium"
                    android:text="@string/purchase_history"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:setAdapter="@{adapterCart}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_cart_product" />

...
